<resources>
    <string name="app_name">project_2</string>
    <string name="title">中山大学课外体育积分电子认证系统</string>
    <string name="username">用户名:</string>
    <string name="username_hint">请输入用户名</string>
    <string name="password">密码:</string>
    <string name="password_hint">请输入密码</string>
    <string name="selector_1">学生</string>
    <string name="selector_2">老师</string>
    <string name="selector_3">社团</string>
    <string name="selector_4">管理者</string>
    <string name="button_1">登录</string>
    <string name="button_2">注册</string>
</resources>
