<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_container">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/title"
            android:layout_marginTop="20dp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@mipmap/sysu"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/inputTable_margin"
            android:layout_marginRight="@dimen/inputTable_margin">
            <TableRow
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/username_input_wrapper"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/username_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/username_hint"
                        android:textSize="@dimen/selectorText_size"
                        android:gravity="center"
                        android:singleLine="true"
                        />
                </android.support.design.widget.TextInputLayout>
            </TableRow>
            <TableRow
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_input_wrapper"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/password_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:hint="@string/password_hint"
                        android:textSize="@dimen/selectorText_size"
                        android:gravity="center"
                        android:singleLine="true"
                        android:layout_weight="1"/>
                </android.support.design.widget.TextInputLayout>
            </TableRow>
        </TableLayout>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:id="@+id/role_buttons">
            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:checked="true"
                android:text="@string/selector_1"/>
            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:text="@string/selector_2"/>
            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:text="@string/selector_3"/>
            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:text="@string/selector_4"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:textColor="@color/button"
                android:background="@drawable/button1"
                android:text="@string/button_1"/>
            <Button
                android:id="@+id/signUp_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/button"
                android:textColor="@color/button"
                android:background="@drawable/button1"
                android:text="@string/button_2"/>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>